# rust-loguru

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark_result.md
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
benches/: basic_logging_benchmark.rs  concurrent_benchmark.rs  file_rotation_benchmark.rs  high_volume_benchmark.rs  slog_vs_loguru_benchmark.rs  structured_logging_benchmark.rs
examples/: advanced_context.rs  advanced_macros.rs  advanced_usage.rs  api_usage.rs
src/: async_logger.rs  config.rs  context.rs  error.rs  formatter.rs  integration.rs  level.rs  lib.rs  logger.rs  macros.rs  record.rs  record_pool.rs  scope.rs  test_utils.rs
src/formatters/: json.rs  mod.rs  template.rs  text.rs  util.rs
src/handler/: console.rs  file.rs  mod.rs  network.rs  null.rs
src/handlers/: null.rs
tests/: config_tests.rs  console_handler_tests.rs  context_tests.rs  error_handling_tests.rs  file_handler_tests.rs  logger_tests.rs  macros_tests.rs  performance_test.rs  scope_tests.rs
tools/: benchmark_comparison.py  run_benchmark.sh
