[package]
name = "rust-loguru"
version = "0.1.16"
edition = "2021"
authors = ["Jayasimha Raghavan <mr.jayasimha@gmail.com>"]
description = "A flexible and extensible logging library for Rust. Similar functionality as python's loguru package."
license = "MIT"
repository = "https://github.com/j-raghavan/rust-loguru"
readme = "README.md"
exclude = ["tests/", "specs/", "examples/", "*.log", ".github/", ".gitignore", "Cargo.toml.orig", ".*.json"]

[features]
default = []
debug_logging = []
max_level_off = []
max_level_error = []
max_level_warn = []
max_level_info = []
max_level_debug = []
max_level_trace = []
tokio = ["dep:tokio"]

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12"
chrono = "0.4"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rand = "0.8"
crossbeam-channel = "0.5.15"
log = "0.4.27"
regex = "1.10.2"
flate2 = "1.0"
toml = "0.8.21"
tokio = { version = "1.37", optional = true, features = ["rt", "macros", "time"] }
log4rs = "1.3.0"
tracing-appender = "0.2.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio-test = "0.4"
slog = "2.7"
slog-async = "2.7"
slog-term = "2.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.10"
bytesize = "1.2"
num_cpus = "1.15"
procfs = "0.15"  # For Linux only (resource usage tracking)

[[example]]
name = "api_usage"
path = "examples/api_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

# Benchmark configurations - add these sections to enable criterion benchmarks
[[bench]]
name = "basic_logging_benchmark"
harness = false

[[bench]]
name = "structured_logging_benchmark"
harness = false

[[bench]]
name = "high_volume_benchmark"
harness = false

[[bench]]
name = "concurrent_benchmark"
harness = false

[[bench]]
name = "file_rotation_benchmark"
harness = false
